# unity-n-native

./: README.md  package.json
src/n-native/: DynamicLibrary.cs
src/n-native/Editor/: DynamicLibraryTests.cs
test/: package.json
test/Assets/Plugins/: libplugin.bundle
test/plugin/: .gitmodules  CMakeLists.txt  README.md
test/plugin/libnpp/: CMakeLists.txt  README.md
test/plugin/libnpp/src/npp/: external.h  format.h  iterator.h  types.h  unique.h
test/plugin/libnpp/src/npp/test/: test.h  test_result.h  test_suite.h
test/plugin/libnpp/tests/: test-format.cpp  test-iterator.cpp  test-option.cpp  test-result.cpp  test-unique.cpp
test/plugin/src/plugin/: plugin.cpp  plugin.h
test/plugin/tests/: test-plugin-api.cpp
